--- a/docs/base/算法基础.md
+++ b/docs/base/算法基础.md
@@ -2,16 +2,62 @@
 
 ## 复杂度分析
 
+我们一般使用程序性能来表示一个程序对内存和时间的需求，可以通过性能分析（分析法）和性能测量（实验法）来得到这两个指标。
+
+* 程序运行所需的内存大小：使用 **空间复杂度** 来表示。
+* 程序运行所需的时间长短：使用 **时间复杂度** 来表示。
+
+### 渐进记法：大O 表示法
+
+表示的是随数据规模增长的一种变化趋势，一般会忽略低阶、常量以及系数部分。
+
+例如 2n^2 + n + 1 会仅保留 n^2，需要更细致的分析时才会重新分析忽略部分。
+
+* O(1)：常量级。凡事和数据规模无关的都算作常量级。
+* O(n)：线性级。
+* O(n^m)：m次方级。
+* O(logn): 对数级。
+* O(nlogn)：线性对数级。
+* O(2^n)：指数级。容易膨胀
+* O(n!)：阶乘级。容易膨胀
+
+### 空间复杂度
+
+空间复杂度就是表示程序运行所需的内存大小。
+
+* 指令空间：程序指令所占用的存储空间。
+* **数据空间**：所有常量和变量所需的空间。
+* 环境栈空间：栈中保存的暂停函数和方法恢复运行所需要的信息。
+  * 使用递归时可能需要考虑这部分空间，不过现在编译器一般会进行尾递归优化，可以不考虑这部分空间。
+
+进行分析时 一般可以忽略 指令空间和 环境栈空间，只需要考虑受规模影响的那部分数据即可。
+
 ### 时间复杂度
+
+时间复杂度用于表明程序运行所需要等待时间。
+
+程序的执行时间和具体数据类型的操作有关，不同的操作间的耗时并不相同。不过进行分析时 一般会假设每行代码的执行时间相同，从而统计代码执行的行数即可。
 
 > 在小规模数据面前, O(n2) 时间复杂度的算法并不一定比 O(nlogn) 的算法执行时间长。因为此时省略的低阶、系数和常数的影响将会放大。
 
-* O(1)：常量级
-* O(n)：线性复杂度
-* O(n^2)：指数复杂度
-* O(logn): 对数复杂度
+### 最好、最坏、平均时间复杂度
 
-### 空间复杂度
+程序运行时执行流程会收到一些条件语句影响，从而出现在不同条件下时间复杂度会不相同。
+
+此时一般会分析最好、最坏、平均三种场景下的时间复杂度。
+
+* 最好：最理想条件下的时间复杂度。最短时间
+* 最坏：最坏条件下时间复杂度。最长时间。
+* 加权平均：平均情况分析比较复杂，需要从概率统计方面进行计算。
+
+### 均摊分析
+
+将个别时间复杂度较高的情况分摊到其他时间复杂度较的场景，一般情况下和最好时间复杂度相同。
+
+* 大部分场景下复杂度都较低，个别情况复杂度较高。
+* 存在一定的规律，前后连贯的时序关系。
+
+
 
 ## 有序度和逆序度
 
@@ -74,50 +120,242 @@
 
 
 
-
-
 ## 排序算法
 
-| 排序算法 | 时间复杂度                  | 空间复杂度 | 稳定排序？ | 原地排序？ |
-| -------- | --------------------------- | ---------- | ---------- | ---------- |
-| 冒泡排序 | O(n^2)                      |            | Y          | Y          |
-| 插入排序 | O(n^2)                      |            | Y          | Y          |
-| 选择排序 | O(n^2)                      |            | N          | Y          |
-| 快速排序 | O(n logn), 最坏退化为O(n^2) | O(1)       | N          | Y          |
-| 归并排序 | O(n logn)                   | O(n)       | Y          | N          |
-| 计数排序 | O(n + k)，k是数据范围       |            | Y          | N          |
-| 桶排序   | O(n)                        |            | Y          | N          |
-| 基数排序 | O(d n), d是维度             |            | Y          | N          |
+> 原地排序：空间复杂度为O(1)的排序算法。
+>
+> 稳定排序：原序列中值相等的元素，排序后先后顺便没有改变。
 
-### 插入排序
+| 排序算法 | 时间复杂度                  | 空间复杂度 | 原地排序？ | 稳定排序？ | 使用场景                   |
+| -------- | --------------------------- | ---------- | ---------- | ---------- | -------------------------- |
+| 冒泡排序 | O(n^2)                      | O(1)       | Y          | Y          |                            |
+| 插入排序 | O(n^2)                      | O(1)       | Y          | Y          |                            |
+| 选择排序 | O(n^2)                      | O(1)       | Y          | N          |                            |
+| 快速排序 | O(n logn), 最坏退化为O(n^2) | O(1)       | Y          | N          | Java中的的 `Arrays.sort()` |
+| 归并排序 | O(n logn)                   | O(n)       | N          | Y          |                            |
+| 计数排序 | O(n + k)，k是数据范围       |            | N          | Y          |                            |
+| 桶排序   | O(n)                        |            | N          | Y          |                            |
+| 基数排序 | O(d n), d是维度             |            | N          | Y          |                            |
 
-循环不变式
+### 冒泡排序（Bubble Sort）
 
-> 元素A[1..j-1]就是原来在位置1到j-1的元素，但已按序排列
+基于比较，是一种稳定排序。
 
-- 初始化：循环的第一次迭代之前，它为真。
-- 保持：如果循环的某次迭代之前它为真，那么下次迭代之前它仍为真。
-- 终止：在循环终止时，不变式为我们提供一个有用的性质，该性质有助于证明算法时正确的。
+* 顺序遍历元素，依次进行冒泡。
+* 每次冒泡都比较前后每个元素，**若前一个大于后一个则进行交换**。
+  * 每次冒泡可以确定一个值的位置，所以操作次数依次递减。
+* 当遍历到数组末尾或者某个元素冒泡操作未发生交换则完成排序。
 
-### 归并排序
+复杂度分析：
 
-核心思想是分治。
+* 时间复杂度 O(n^2)，元素交换次数固定等于逆序度。
 
-将一个大问题**分解**为一个个小问题处理，最后再**合并**结果。
+  * 最好:O(n)
+
+  * 最坏:O(n^2)
+
+* 空间复杂度 O(1)
+
+```kotlin
+		/**
+     * 冒泡排序
+     * [compare]：指定比较方式，默认降序输出
+     */
+    fun bubbleSort(arrays: IntArray, compare: (Int, Int) -> Boolean = { f, s -> f > s }): IntArray {
+        // 倒序遍历：表示需要比对的次数
+        for (end in (arrays.size - 1) downTo 1) {
+            // 顺序遍历：进行比对
+            for (begin in 0 until end) {
+                if (compare(arrays[begin], arrays[begin + 1])) {
+                    // 默认为前一个大于后一个，交换
+                    val temp = arrays[begin]
+                    arrays[begin] = arrays[begin + 1]
+                    arrays[begin + 1] = temp
+                }
+            }
+        }
+        return arrays
+    }
+```
+
+### 插入排序（Insertion Sort）
+
+基于比较，是一种稳定排序。
+
+* 将数组分为已排序区和未排序区，一开始已排序区为空，未排序区就是整个数组。
+
+* 顺序遍历未排序区，**和已排序区元素进行比较，找到合适的位置插入**，并将插入点的数据迁移。
+  * 迁移操作可以在遍历比对的过程中同步进行。
+* 当未排序区为空完成排序。
+
+复杂度分析
+
+* 时间复杂度 O(n^2)，元素移动次数固定等于逆序度。
+
+  * 最好:O(n)
+
+  * 最坏:O(n^2)
+
+* 空间复杂度 O(1)
+
+```kotlin
+/**
+     * 插入排序，降序输出
+     */
+	fun insertionSort(arrays: IntArray): IntArray {
+        if (arrays.size <= 1) return arrays
+        for (i in 1 until arrays.size) {
+            val value = arrays[i]
+            // 进行向前比较，查找到插入的位置，即 <= value的前一个位置
+            // j 指向比较位置
+            var j = i - 1
+            while (j >= 0) {
+                // 若value小于前面的值，则暂时记录 作为插入位置。
+                // 同时搬移数据
+                if (value < arrays[j]) {
+                    arrays[j + 1] = arrays[j]
+                } else { // 当前 j位置的值 <= value，跳出循环
+                    break
+                }
+                --j
+            }
+          	// 当前 arrays[j] <= value
+          	// 插入j的后面
+            arrays[j + 1] = value
+        }
+        return arrays
+    }
+```
+
+### 选择排序（Selection Sort）
+
+也是基于比较，类似插入排序，但它是一种不稳定排序算法。
+
+* 将数组分为已排序区和未排序区，一开始已排序区为空，未排序区就是整个数组。
+
+* 遍历未排序区，**选择出最小值，插入到已排序区末尾**（即和未排序区队首交换）。
+* 当未排序区为空完成排序。
+
+复杂度分析：
+
+* 时间复杂度 O(n^2)
+
+  * 最好:O(n)
+
+  * 最坏:O(n^2)
+
+* 空间复杂度 O(1)
+
+```kotlin
+	fun selectionSort(arrays: IntArray): IntArray {
+        if (arrays.size <= 1) return arrays
+        for (i in arrays.indices) {
+            val minIndex = getMinIndex(arrays, i, arrays.size - 1)
+            // 和最小值进行交换
+            val temp = arrays[i]
+            arrays[i] = arrays[minIndex]
+            arrays[minIndex] = temp
+        }
+        return arrays
+    }
+
+    private fun getMinIndex(arrays: IntArray, start: Int, end: Int): Int {
+        var minIndex = start
+        for (i in (start + 1)..end) {
+            if (arrays[i] < arrays[minIndex]) {
+                minIndex = i
+            }
+        }
+        return minIndex
+    }
+```
 
 
 
-###  快速排序
+### 归并排序（Merge Sort）
 
-最常见的排序算法之一，Java 的 `Arrays.sort()` 就是快速排序。
+核心是**分治思想**。是否是稳定算法取决于 `merge()`函数，下面代码中是稳定算法。
 
-核心思想就是分治：
+归并排序整个流程是**自底向上**的：
 
-* 对于数组[p, r]，首先选择某个分区点 pivot。
-* 遍历 数组[p, r]，将小于 pivot的放在左边，大于pivot 的放在右边。
-* 递归处理左右分区的数据。
+* 将一个大问题**直接分解**为一个个子问题处理，直到不可分割。 此时各个子问题间是无序的
+* 优先**处理子问题进行排序**，然后再向上合并，最终得到结果。
+
+复杂度分析：
+
+* 时间复杂度 O(nlogn)
+
+* 空间复杂度 O(n)
+
+```kotlin
+/**
+     * 归并排序，从小到大 升序输出
+     */
+    fun mergeSort(arr: IntArray): IntArray {
+        if (arr.size <= 1) {
+            return arr
+        }
+        return actualMergeSort(arr, 0, arr.size - 1)
+    }
+
+    /**
+     * 递归执行
+     */
+    private fun actualMergeSort(arr: IntArray, start: Int, end: Int): IntArray {
+        if (start > end) {
+            return intArrayOf()
+        }
+        if (start == end) {
+            return intArrayOf(arr[start])
+        }
+        val mid = (start + end) / 2
+        return merge(actualMergeSort(arr, start, mid), actualMergeSort(arr, mid + 1, end))
+    }
+
+    /**
+     * 合并两个有序数组
+     */
+    private fun merge(arr1: IntArray, arr2: IntArray): IntArray {
+        if (arr1.isEmpty()) return arr2
+        if (arr2.isEmpty()) return arr1
+        val retArr = IntArray(arr1.size + arr2.size)
+        var p1 = 0
+        var p2 = 0
+        var num1: Int
+        var num2: Int
+        while (p1 < arr1.size || p2 < arr2.size) {
+            num1 = if (p1 < arr1.size) arr1[p1] else Int.MAX_VALUE
+            num2 = if (p2 < arr2.size) arr2[p2] else Int.MAX_VALUE
+            retArr[p1 + p2] = if (num1 <= num2) {
+                p1++
+                num1
+            } else {
+                p2++
+                num2
+            }
+        }
+        return retArr
+    }
+```
 
 
+
+###  快速排序（Quick Sort）
+
+> Java 的 `Arrays.sort()` 就是快速排序。
+
+核心思想就是也是分治，类似归并排序，分区操作则是有点选择排序的意思。和归并排序的主要区分是，归并是直接分解，子问题排序后再合并得到结果，快速排序则是在分区操作中确定了顺序，分区完后就直接有序了并不需要合并。
+
+* 对于数组[p, r]，首先选择某个分区点 pivot。遍历数组[p, r]，将小于 pivot的放在左边，大于pivot 的放在右边。
+* 得到左右两个分区以及分区点pivot三个部分。
+* 不过左右分区并不是有序的，需要继续递归处理左右分区的数据。
+* 递归结束就得到排序结果。
+
+复杂度分析：
+
+* 时间复杂度 O(nlogn)，在极端情况下分区极其不均匀会退化为 O(n^2)，不过大部分情况依然是O(nlogn)。
+
+* 空间复杂度 O(1)
 
 > 分区选择优化
 
@@ -133,9 +371,130 @@
 
 * 限制递归层级；
 
-* 自己实现堆上栈；
+* 自己实现堆上栈；手动模拟递归，越过系统栈大小的限制；
 
-  手动模拟递归，越过系统栈大小的限制；
+
+```kotlin
+/**
+     * 快速排序，不稳定排序算法
+     */
+    fun quickSort(arr: IntArray): IntArray {
+        return actualQuickSort(arr, 0, arr.size - 1)
+    }
+
+    /**
+     * 递归执行
+     */
+    private fun actualQuickSort(arr: IntArray, start: Int, end: Int): IntArray {
+        if (start > end) {
+            return intArrayOf()
+        }
+        if (start == end) {
+            return intArrayOf(arr[start])
+        }
+        val pivot = partition(arr, start, end)
+        actualQuickSort(arr, start, pivot - 1)
+        actualQuickSort(arr, pivot + 1, end)
+        return arr
+    }
+
+    /**
+     * 分区函数，分区并返回分区点
+     */
+    private fun partition(arr: IntArray, start: Int, end: Int): Int {
+        // 内部使用类似选择排序的方式进行分区、比对、交换
+        // 获取分区操作的分区比较点
+        val pivot = makePivot(arr, start, end)
+        var i: Int = start // 指向已分区插入节点位置
+        for (j in start..end) {
+            if (arr[j] <= pivot) {
+                // <= pivot，加入到已分区末尾
+                // 交换
+                swap(arr, i, j)
+                if (j != end) {
+                    // 不是最后一位，就后移一位
+                    // 遍历到最后时，必然等于pivot，此时交换即可，且i就是分区点
+                    i++
+                }
+            }
+        }
+        return i
+    }
+
+    /**
+     * 获取分区操作的分区比较点。
+     * 1. 直接获取最后一个
+     * 2. 三数取中，根据start、mid、end，选取中间大小的数字作为分区点，将中数放到最后即可
+     * 3. 随机
+     */
+    private fun makePivot(arr: IntArray, start: Int, end: Int): Int {
+        if (start - end <= 1) {
+            return arr[end]
+        }
+        val mid = (start + end) / 2
+        // 1
+        if (arr[start] > arr[mid]) {
+            swap(arr, start, mid)
+        }
+        // 2, 此时 start最小
+        if (arr[start] > arr[end]) {
+            swap(arr, start, end)
+        }
+        // 若 mid 为中数，所以后end交换
+        if (arr[mid] < arr[end]) {
+            swap(arr, mid, end)
+        }
+        return arr[end]
+    }
+
+    private fun swap(arr: IntArray, i: Int, j: Int) {
+        val temp = arr[i]
+        arr[i] = arr[j]
+        arr[j] = temp
+    }
+```
+
+### 桶排序（Bucket sort）
+
+遍历n个数据并均匀的划分到 m 个有序的桶中，然后每个桶内部使用快排单独排序，最后依次从桶中取出数据，这样就有序了。
+
+复杂度分析：
+
+* 时间复杂度：O(n)；
+  * 数据遍历划分： O(n)
+  * m次桶内排序：k=n/m; m* klogk; 当 m 和n 相近时 logk是很小的常数。
+* 空间复杂度：O(n)
+
+使用桶排序的条件：
+
+* 数据容易划分。
+* 桶间数据比较均匀。
+* 适用于外部排序，数据存储在磁盘中，数据量大，内存有限的情况。
+
+### 计数排序（Counting sort）
+
+特殊的桶排序，相当于分组。每个桶表示一个值，桶内的元素没有先后关系，且这里存储的是元素个数不是具体的值，直接存储即可，节省了桶内排序的时间。
+
+* 确定数据范围：遍历元素，查询最大、最小值计算范围。
+  * 这里还需要将 max、min转为数组下标。即
+
+* 将数据映射到数组中[0, max - min]，并计数：遍历元素并进行计数。例如 a[0] = 2，表示存在2个值为0元素。
+  * [0,1,2,0,1,2,2] 转为 [2,2,3]
+  * [ -1, -1, 1] 转为 [2,0,1]
+* 完成计数后，对内部计数进行累加。
+  * [2,2,3]  转化为 [2, 4, 7]。即。<=2的数有7个。
+* 累加后其实我们就得到了每个元素对应的在元素数组中的左右边界。
+  * [2,4,7] 对应 0~1; 2~3; 4~6
+* 转换填充完成后就完成排序。
+  * 最终得到  [0,0,1,1,2,2,2] 这样的排序结果
+
+复杂度分析：
+
+* 时间复杂度：O(n)
+* 空间复杂度：O(m)；m表示数据范围 max - min。
+  * 适用于**数据范围小于数据量**的场景。原因就是一个值就需要划分一个桶，无论原数据中是否存在这个值。例如就两个值(0, 100000)，此时用计数排序 需要申请 100001个桶，很浪费。
+
+---
 
 ## 查找算法
 
@@ -184,7 +543,7 @@
 
 ### 一致性哈希算法
 
-> 背景：在分布式缓存中，我们通过取模的方式将哈希值分布到不同服务器上，若此时需要进行扩容/缩容时，所有数据都需要重新计算哈希值。
+> # 背景：在分布式缓存中，我们通过取模的方式将哈希值分布到不同服务器上，若此时需要进行扩容/缩容时，所有数据都需要重新计算哈希值。
 >
 > 那么就会导致所有数据请求都会穿透缓存，直接请求数据库，可能出现雪崩效应，压垮数据库。
 
@@ -272,4 +631,48 @@
 3. 将C放会优先级队列，重复第二步。直至队列为空。
 
 
+
+## 数据类型对应空间大小
+
+一个内存地址 `0xFF` 代表 一个字节（8bit）
+
+> 常见的 b 和 B的区别，B指 字节byte，b值 位bit
+
+| 单位       | 大小                  |                                                  |
+| ---------- | --------------------- | ------------------------------------------------ |
+| bit：位    | 可以表示 0和1。       | 计算运行的基本单位。                             |
+| byte：字节 | 1byte = 8bit          | 文件大小的基本单位。读取的文件流就是byte为单位。 |
+| word：字符 | 1字符 = 2byte = 16bit | 英文字母：1字符；中文字符：2字符。               |
+|            |                       |                                                  |
+
+
+
+### Java
+
+> n 表示数据类型的 位数
+>
+> 一般取值范围计算：[-2^(n -1), 2^(n-1)-1]
+>
+> 若是无符号：[0, 2^n -1]
+
+| 类型      | 字节 | 位数 | 默认值  | 取值范围                                    |
+| :-------- | :--- | :--- | :------ | ------------------------------------------- |
+| `byte`    | 1    | 8    | 0       | [-128, 127]                                 |
+| `short`   | 2    | 16   | 0       | [-32768, 32767]                             |
+| `char`    | 2    | 16   | 'u0000' | [0, 65535]                                  |
+| `int`     | 4    | 32   | 0       | [-2147483648, 2147483647]                   |
+| `long`    | 8    | 64   | 0L      | [-9223372036854775808, 9223372036854775807] |
+| `float`   | 4    | 32   | 0f      | 1.4E-45 ~ 3.4028235E38                      |
+| `double`  | 8    | 64   | 0d      | 4.9E-324 ~ 1.7976931348623157E308           |
+| `boolean` |      | 1    | false   | true、false                                 |
+
+
+
+循环不变式
+
+> 元素A[1..j-1]就是原来在位置1到j-1的元素，但已按序排列
+
+- 初始化：循环的第一次迭代之前，它为真。
+- 保持：如果循环的某次迭代之前它为真，那么下次迭代之前它仍为真。
+- 终止：在循环终止时，不变式为我们提供一个有用的性质，该性质有助于证明算法时正确的。
 
