--- a/docs/面试题/数据结构与算法相关面试题.md
+++ b/docs/面试题/数据结构与算法相关面试题.md
@@ -1,2 +1,14 @@
 # 数据结构与算法相关面试题
 
+## 为什么插入排序比冒泡排序更受欢迎？
+
+两者相同点：
+
+* 时间复杂度都是O(n^2)。
+* 都是原地排序，空间复杂度O(1)。
+* 都是稳定排序。
+
+不同点：
+
+* 冒泡排序遍历期间每次交换操作都需要进行 3次赋值。
+* 插入排序遍历期间进行的是移动操作，仅需要 1 次赋值操作，所以更快。
