--- a/docs/base/数据结构基础.md
+++ b/docs/base/数据结构基础.md
@@ -1,18 +1,33 @@
 # 数据结构基础
 
+数据结构是一个数据对象，这个对象的实例以及构成该实例的元素都存在着联系，这个联系就是函数。
+
+数据对象就是指一组实例或值。
+
+| 数据类型  | 查询（随机访问） | 插入删除 |
+| --------- | ---------------- | -------- |
+| 数组/矩阵 | O(1)             | O(n)     |
+| 链表      | O(n)             | O(1)     |
+
 ## 线性表
+
+线性表分为 顺序表和链表。元素之间可以排成一列，只会存在存在前后关系。相对的非线性表，元素间的关系不仅仅是前后关系，如树、图。
+
+* 顺序表：基于数组实现。
+* 链表：基于指针实现。
 
 ### 数组和矩阵
 
-> 连续空间
+数组是一种线性表，具有一片连续的存储空间。
 
-| 随机访问 | 插入删除 |
-| -------- | -------- |
-| O(1)     | O(n)     |
+时间复杂度：
+
+* 随机访问：O(1)
+* 插入删除：O(n)
 
 优点
 
-- 存取速度快
+- 查询速度快
 
 缺点
 
@@ -22,14 +37,24 @@
 
 ### 链表
 
-通过指针链接次序。
+通过指针将一些零散的内存块链接起来，这些内存块叫做链表的结点，结点中包含数据和指针。
+
+链表的第一个结点叫做**头结点**，最后一个结点叫做**尾结点**
+
+时间复杂度：
+
+* 随机访问：O(n)
+* 插入删除：O(1)
+  * 对于单链表，单纯的插入删除操作虽然是O(1)，但是前驱结点的定位需要O(n)的查询时间，所以实际复杂度是O(n)。双链表优化的就是这点，能直接定位前驱结点。
+
+优点：
 
 - 插入删除速度快。
 - 非连续、非顺序的存储结构
 - 空间没有限制，也不必事先知道大小。
 
-缺点
-- 存取速度慢。
+缺点：
+- 随机访问的速度慢。
 
 > 链表的类型：
 
@@ -41,7 +66,7 @@
 
 ### 静态链表
 
-> 用数组表述链表。
+> 使用数组存储的一种链表。基本已经不怎么使用。
 
 数组的每个元素都有**2个数据域**构成，一个存储**数据元素（data）**，一个存储**游标（cur）**,相当于单链表中的next指针。
 
@@ -172,9 +197,110 @@
 * Redis有序集合：跳表 + 散列表
 * LinkedHashMap：散列表 + 双向链表，原理同LRU缓存淘汰策略。
 
+
+
+
+
+### 栈
+
+栈是一种 **操作受限的线性表**。具体的实现即可以是数组(顺序栈)，也可以是链表(链式栈)。
+
+* 仅允许一端进行插入(入栈)和删除(出栈)。
+* 先进后出，后进先出。
+
+```kotlin
+/**
+ * 基于数组的顺序栈
+ */
+class ArrayStack(private val n: Int) {
+
+    private val data = Array<String?>(n) { null }
+    private var count = 0
+
+    fun push(item: String): Boolean {
+        return when {
+            count == n -> false
+            else -> {
+                data[count++] = item
+                true
+            }
+        }
+    }
+
+    fun pop(): String? {
+        if (count == 0) return null
+        return data[count--]
+    }
+}
+```
+
+
+
+### 队列
+
+队列和栈很相似，也是一种操作受限的线性表。具体的实现即可以是数组(顺序队列)，也可以是链表(链式队列)。
+
+* 支持对头删除，队尾插入。
+* 先进先出。
+
+| 常见的队列 |                                                              |
+| ---------- | ------------------------------------------------------------ |
+| 循环队列   | 队列首尾相连，可以优化掉数组队列的数据迁移操作。一般队尾不保存数据，目的是区分队空和队满的情况。 |
+| 阻塞队列   | 当队列为空时，从对头获取数据会被阻塞。队列满时，插入数据会被阻塞。使用于生产-消费模式。 |
+| 并发队列   | 通过加锁或者CAS，从而支持并发操作的队列。                    |
+
+
+
+### 堆
+
+#### 堆排序
+
+在堆排序中会使用完全二叉树。
+
+#### 数组堆化
+
+* 数组的第一个元素`array[0]`不存储数据。
+* 堆中的第一个元素就是数组 `array[1]`。
+
+##### 在完全二叉树中父节点和子节点间的快速定位
+
+假设 父节点位置为 i
+
+存在两种情况 序号从 0 开始：
+
+```kotlin
+val left = 2 * i + 1
+val right = 2 * i + 2
+```
+
+序号从 1 开始：
+
+```kotlin
+val left = 2 * i
+val right = array[2 * i + 1]
+```
+
+##### 求完全二叉树最后一个非叶子节点
+
+完全二叉树 长度为 n。
+
+存在两种情况 序号从 0 开始：
+
+```kotlin
+val node = n >>> 1 - 1;
+```
+
+序号从 1 开始：
+
+```kotlin
+val node = n >>> 1;
+```
+
+---
+
 ## 树（Tree）
 
-> 存储方式
+> 非线性表，存储方式
 >
 > 1. 基于指针或者引用的二叉链式存储法。
 >
@@ -418,51 +544,6 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 * 计算每一层的总时间
 * 统计树高，累加
 
-## 堆
-
-### 堆排序
-
-在堆排序中会使用完全二叉树。
-
-### 数组堆化
-
-* 数组的第一个元素`array[0]`不存储数据。
-* 堆中的第一个元素就是数组 `array[1]`。
-
-#### 在完全二叉树中父节点和子节点间的快速定位
-
-假设 父节点位置为 i
-
-存在两种情况 序号从 0 开始：
-
-```kotlin
-val left = 2 * i + 1
-val right = 2 * i + 2
-```
-
-序号从 1 开始：
-
-```kotlin
-val left = 2 * i
-val right = array[2 * i + 1]
-```
-
-#### 求完全二叉树最后一个非叶子节点
-
-完全二叉树 长度为 n。
-
-存在两种情况 序号从 0 开始：
-
-```kotlin
-val node = n >>> 1 - 1;
-```
-
-序号从 1 开始：
-
-```kotlin
-val node = n >>> 1;
-```
-
 
 
 ## 图
@@ -470,6 +551,12 @@ val node = n >>> 1;
 邻接矩阵、邻接表、逆邻接表
 
 深度广度优先搜索
+
+
+
+
+
+
 
 
 
@@ -495,19 +582,6 @@ val node = n >>> 1;
 
 
 ## 附录
-
-
-
-### 存储单位
-
-| 单位       | 大小                  |                                                  |
-| ---------- | --------------------- | ------------------------------------------------ |
-| bit：位    | 可以表示 0和1。       | 计算运行的基本单位。                             |
-| byte：字节 | 1byte = 8bit          | 文件大小的基本单位。读取的文件流就是byte为单位。 |
-| word：字符 | 1字符 = 2byte = 16bit | 英文字母：1字符；中文字符：2字符。               |
-|            |                       |                                                  |
-
-> 常见的 b 和 B的区别，B指 字节byte，b值 位bit
 
 ### 伪代码
 
