--- a/docs/private/临时笔记.md
+++ b/docs/private/临时笔记.md
@@ -456,3 +456,15 @@ make install
 
 
 ![image-20230801211138975](./%E4%B8%B4%E6%97%B6%E7%AC%94%E8%AE%B0.assets/image-20230801211138975.png)
+
+
+
+## Sublime Text
+
+### 插件   
+
+#### CTags(用于类的跳转)
+``brew install Ctags``
+
+#### Cscope
+``brew install cscope``
