--- a/docs/base/算法基础.md
+++ b/docs/base/算法基础.md
@@ -28,7 +28,7 @@
 * 指令空间：程序指令所占用的存储空间。
 * **数据空间**：所有常量和变量所需的空间。
 * 环境栈空间：栈中保存的暂停函数和方法恢复运行所需要的信息。
-  * 使用递归时可能需要考虑这部分空间，不过现在编译器一般会进行尾递归优化，可以不考虑这部分空间。
+  * 使用递归时可能需要考虑这部分空间。
 
 进行分析时 一般可以忽略 指令空间和 环境栈空间，只需要考虑受规模影响的那部分数据即可。
 
@@ -112,11 +112,64 @@
 
 空间复杂度：O(n*w)
 
-动态规划用于解决最优问题。
+动态规划用于解决最优问题（最小、最大）。
 
 * 最优子结构：问题的最优解包含子问题的最优解；后面阶段的状态可以通过前面阶段的状态推导出来。
 * 无后效性：阶段的状态确定后，不会受后面阶段的影响。
 * 重复子问题：不同的决策序列，到达某个阶段后，可能会产生重复的状态。
+
+一般步骤：
+
+* 推导状态转移方程。
+* 定义一个 `dp` 状态数组，记录各个阶段的状态。
+* 编码
+
+```kotlin
+/**
+ * 最小路径和
+ * 给定一个包含非负整数的 m x n 网格 grid ，请找出一条从左上角到右下角的路径，使得路径上的数字总和为最小。
+ * 每次只能向下或者向右移动一步
+ */
+class Solution {
+
+    /**
+     * 动态规划
+     * 
+     * f[i][j] = f[i - 1][j] || f[i][j - 1] + 当前路径长度
+     * 时间复杂度：O(mn)
+     * 空间复杂度：O(mn)
+     */
+    fun minPathSum(grid: Array<IntArray>): Int {
+        if (grid.isEmpty()) return 0
+        val m = grid.size // 行
+        val n = grid[0].size // 列
+        val dp = Array(m) {
+            IntArray(n)
+        }
+        //初始化左上角
+        dp[0][0] = grid[0][0]
+        // 初始化第一列(每行第一个元素)，只能从上边演变过来
+        for (i in 1 until  m) {
+            dp[i][0] = grid[i][0] + dp[i - 1][0]
+        }
+        // 初始化第一排 (每列第一个元素)，只能从左边列演变过来列状态
+        for (j in 1 until n) {
+            dp[0][j] = grid[0][j] + dp[0][j - 1]
+        }
+        // 处理其他元素
+        for (i in 1 until m) {
+            for (j in 1 until n) {
+                // 只能下、右移动，所以 当前状态只可能从 上边 或者 左边得到
+                // 当前路径值 + min(上方最小路径，左边最小路径)
+                dp[i][j] = grid[i][j] + Math.min(dp[i - 1][j], dp[i][j - 1])
+            }
+        }
+        return dp[m - 1][n - 1]
+    }
+}
+```
+
+
 
 
 
@@ -131,11 +184,12 @@
 | 冒泡排序 | O(n^2)                      | O(1)       | Y          | Y          |                            |
 | 插入排序 | O(n^2)                      | O(1)       | Y          | Y          |                            |
 | 选择排序 | O(n^2)                      | O(1)       | Y          | N          |                            |
-| 快速排序 | O(n logn), 最坏退化为O(n^2) | O(1)       | Y          | N          | Java中的的 `Arrays.sort()` |
 | 归并排序 | O(n logn)                   | O(n)       | N          | Y          |                            |
-| 计数排序 | O(n + k)，k是数据范围       |            | N          | Y          |                            |
-| 桶排序   | O(n)                        |            | N          | Y          |                            |
+| 快速排序 | O(n logn), 最坏退化为O(n^2) | O(1)       | Y          | N          | Java中的的 `Arrays.sort()` |
+| 桶排序   | O(n)                        | O(n)       | N          | Y          |                            |
+| 计数排序 | O(n + k)，k是数据范围       | O(m)       | N          | Y          |                            |
 | 基数排序 | O(d n), d是维度             |            | N          | Y          |                            |
+| 堆排序   | O(nlogn)                    |            |            |            |                            |
 
 ### 冒泡排序（Bubble Sort）
 
@@ -467,9 +521,9 @@
 
 使用桶排序的条件：
 
-* 数据容易划分。
+* 数据容易划分，数据范围较小。
 * 桶间数据比较均匀。
-* 适用于外部排序，数据存储在磁盘中，数据量大，内存有限的情况。
+* **适用于外部排序：数据存储在磁盘中，数据量大，但是内存有限，无法全部加载的情况**。
 
 ### 计数排序（Counting sort）
 
@@ -494,11 +548,94 @@
 * 空间复杂度：O(m)；m表示数据范围 max - min。
   * 适用于**数据范围小于数据量**的场景。原因就是一个值就需要划分一个桶，无论原数据中是否存在这个值。例如就两个值(0, 100000)，此时用计数排序 需要申请 100001个桶，很浪费。
 
+
+
+### 基数排序（Radix sort）
+
+按 **位** 进行排序，需要保证排序算法的稳定性且是线性排序（桶排序、计数排序）。使用于多维度条件的排序。
+
+复杂度分析：
+
+* 时间复杂度：O(d*n)，d指维度。
+
+### 堆排序（Heap sort）
+
+堆排序就是使用 **堆** 的特性来进行排序。
+
+```kotlin
+class Heap(
+    capacity: Int
+) {
+    private val data: IntArray
+    private val n: Int // 最大数据容量
+
+    var count: Int
+        // 已存储数据个数
+        private set
+
+    init {
+        // 数组 data[0] 第一个位置不存储数据，方便后续计算。
+        data = IntArray(capacity + 1)
+        n = capacity
+        count = 0
+    }
+
+    fun insert(value: Int) {
+        if (count >= n) return
+        count++
+        data[count] = value
+        maxHeapify(count / 2)
+    }
+
+    fun removeTop() {
+        // 将根节点和最后一个叶子节点交换，并删除
+        swap(1, count)
+        count--
+        maxHeapify(count / 2)
+    }
+
+    fun getTop(): Int {
+        if (count == 0) return -1
+        return data[1]
+    }
+
+    /**
+     * 堆化: 大顶堆
+     * [node]：非叶子节点
+     */
+    private fun maxHeapify(node: Int) {
+        if (count <= 0 || node < 1) return
+        var i = node
+        while (i > 0) {
+            val left = i * 2
+            val right = i * 2 + 1
+            var largest = i
+            if (left <= count && data[left] > data[largest]) {
+                largest = left
+            }
+            if (right <= count && data[right] > data[largest]) {
+                largest = right
+            }
+            swap(i, largest)
+            i /= 2
+        }
+    }
+
+    private fun swap(i: Int, j: Int) {
+        val temp = data[i]
+        data[i] = data[j]
+        data[j] = temp
+    }
+}
+```
+
+
+
 ---
 
 ## 查找算法
 
-|          | 时间复杂度 |      |
+| 算法     | 时间复杂度 |      |
 | -------- | ---------- | ---- |
 | 二分查找 | O(logn)    |      |
 |          |            |      |
@@ -506,19 +643,135 @@
 
 ### 二分查找（Binary Search）
 
-> 折半查找算法
->
 > 在链表中的`跳表`可以支持类似二分的查找算法
+
+折半查找算法
 
 * 顺序表结构
 * 有序数据集合
 
-> 二分查找变形问题、
+时间复杂度：O(logn)
+
+> 二分查找变形问题
 
 * 查找第一个值等于给定值的元素
 * 查找最后一个值等于给定值的元素
 * 查找第一个大于等于给定值的元素
 * 查找最后一个小于等于给定值的元素
+
+### 广度优先搜索（Breadth-First-Search）
+
+使用队列的方式实现，利用先进先出的特性。
+
+> 路径求和为例：查询树中 是否存在 根节点到叶子节点 的路径，这条路径上所有节点值相加等于目标和 `targetSum`。
+
+```kotlin
+/**
+     * BFS，使用队列，先进先出
+     * 时间复杂度：O(n)
+     * 空间复杂度：O(n)
+     */
+    fun hasPathSum(root: TreeNode?, targetSum: Int): Boolean {
+        root ?: return false
+        if (root.left == null && root.right == null) {
+            return targetSum == root.`val`
+        }
+
+        val queue = LinkedList<TreeNode?>()
+        // 记录当前节点对应对应的 sum值
+        val sumQueue = LinkedList<Int>()
+        // 添加到末尾
+        queue.add(root)
+        sumQueue.add(root.`val`)
+        while (queue.isNotEmpty()) {
+            // 获取第一个元素
+            val node = queue.poll()
+            val sum = sumQueue.poll() ?: 0
+            if(node?.left == null && node?.right == null && sum == targetSum) {
+                // 遍历到这个叶子节点时，sum == targetSum
+                return true
+            }
+            // 从队首获取数据，先添加左 就先处理, 后添加右，后处理
+            node?.left?.let {
+                queue.add(it)
+                sumQueue.add(sum + it.`val`)
+            }
+            node?.right?.let {
+                queue.add(it)
+                sumQueue.add(sum + it.`val`)
+            }
+        }
+        return false
+    }
+```
+
+
+
+### 深度优先搜索（Depth-First-Search）
+
+深度优先的实现方式有递归或栈。两者其实是相同的，递归使用的程序的调用栈，所以本质上没什么区别，利用的就是后进先出。
+
+> 路径求和为例：查询树中 是否存在 根节点到叶子节点 的路径，这条路径上所有节点值相加等于目标和 `targetSum`。
+
+```kotlin
+    /**
+     * 递归,DFS
+     * 时间复杂度：O(n)
+     * 空间复杂度：O(logn)，树的高度，最坏可能是 O(n)，树呈现为链状。
+     */
+    fun hasPathSum(root: TreeNode?, targetSum: Int): Boolean {
+        root ?: return false
+        if (root.left == null && root.right == null) {
+            return targetSum == root.`val`
+        }
+        return hasPathSum(root.left, targetSum - root.`val`)
+                || hasPathSum(root.right, targetSum - root.`val`)
+    }
+```
+
+使用栈实现时，和 BFS 的实现代码很相似。利用后进先出的方式实现。
+
+```kotlin
+/**
+     * DFS, 利用栈，后进先出的特性
+     * 这里使用 LinkedList 实现, push 和 pop 是和 Stack 一样的，
+     * 时间复杂度：O(n)
+     * 空间复杂度：O(n)
+     */
+    fun hasPathSum3(root: TreeNode?, targetSum: Int): Boolean {
+        root ?: return false
+        if (root.left == null && root.right == null) {
+            return targetSum == root.`val`
+        }
+        val queue = LinkedList<TreeNode?>()
+        // 记录当前节点对应对应的 sum值
+        val sumQueue = LinkedList<Int>()
+        queue.push(root)
+        sumQueue.push(root.`val`)
+        while (queue.isNotEmpty()) {
+            // 获取队首
+            val node = queue.pop()
+            val sum = sumQueue.pop()
+            if(node?.left == null && node?.right == null && sum == targetSum) {
+                // 遍历到这个叶子节点时，sum == targetSum
+                return true
+            }
+            // 先添加到队首
+            node?.right?.let {
+                queue.push(it)
+                sumQueue.push(sum + it.`val`)
+            }
+            // 后添加到队首，优先处理左节点
+            node?.left?.let {
+                queue.push(it)
+                sumQueue.push(sum + it.`val`)
+            }
+        }
+        return false
+    }
+```
+
+
 
 ## 哈希算法
 
