--- a/docs/base/数据结构基础.md
+++ b/docs/base/数据结构基础.md
@@ -33,19 +33,19 @@
 
 - 需要事先设置数组的长度。
 - 需要连续的存储空间，且大小固定。
-- 插入/删除结点慢。
+- 插入/删除节点慢。
 
 ### 链表
 
-通过指针将一些零散的内存块链接起来，这些内存块叫做链表的结点，结点中包含数据和指针。
+通过指针将一些零散的内存块链接起来，这些内存块叫做链表的节点，节点中包含数据和指针。
 
-链表的第一个结点叫做**头结点**，最后一个结点叫做**尾结点**
+链表的第一个节点叫做**头节点**，最后一个节点叫做**尾节点**
 
 时间复杂度：
 
 * 随机访问：O(n)
 * 插入删除：O(1)
-  * 对于单链表，单纯的插入删除操作虽然是O(1)，但是前驱结点的定位需要O(n)的查询时间，所以实际复杂度是O(n)。双链表优化的就是这点，能直接定位前驱结点。
+  * 对于单链表，单纯的插入删除操作虽然是O(1)，但是前驱节点的定位需要O(n)的查询时间，所以实际复杂度是O(n)。双链表优化的就是这点，能直接定位前驱节点。
 
 优点：
 
@@ -60,9 +60,9 @@
 
 | 类型     |                                              |                                                              |
 | -------- | -------------------------------------------- | ------------------------------------------------------------ |
-| 单向链表 | 数据域 + 一个指针域。                        | 一个存储数据元素的数据域 和 一个存储下一个结点地址的指针域（**后继指针**）组成。 |
-| 双向链表 | 数据域 + 两个指针域。                        | 在单链表的结果上，增加了一个存储上一个结点地址的指针域（**前驱指针**）。Java的`LinkedHashMap` |
-| 循环链表 | 单链表 or 双向链表，**尾结点指针指向头结点** | 能通过任意一个节点找到所有的结点。                           |
+| 单向链表 | 数据域 + 一个指针域。                        | 一个存储数据元素的数据域 和 一个存储下一个节点地址的指针域（**后继指针**）组成。 |
+| 双向链表 | 数据域 + 两个指针域。                        | 在单链表的结果上，增加了一个存储上一个节点地址的指针域（**前驱指针**）。Java的`LinkedHashMap` |
+| 循环链表 | 单链表 or 双向链表，**尾节点指针指向头节点** | 能通过任意一个节点找到所有的节点。                           |
 
 ### 静态链表
 
@@ -94,9 +94,9 @@
 
 跳表索引的动态更新：
 
-> 往跳表中插入数据时，若不更新索引，某2个结点间的数据将很多，甚至退化成单链表。
+> 往跳表中插入数据时，若不更新索引，某2个节点间的数据将很多，甚至退化成单链表。
 
-通过随机函数来维护索引和原始链表大小的平衡。随机生成k, 将结点添加到 `1~k级索引`中。
+通过随机函数来维护索引和原始链表大小的平衡。随机生成k, 将节点添加到 `1~k级索引`中。
 
 ### 散列表（Hash Table）
 
@@ -123,7 +123,7 @@
 
 ![散列表](数据结构基础.assets/散列表.png)
 
-#### 散列函数
+#### 1. 散列函数
 
 > 设计方法：数据分析法、直接寻址法、平方取中法、折叠法、随机数法等
 
@@ -137,7 +137,7 @@
 
 
 
-#### 散列冲突
+#### 2. 散列冲突
 
 > 基于鸽巢原理，存在固定n个鸽巢，有n+1只鸽子，那么必然出现2只鸽子在同一个鸽巢里面。
 >
@@ -145,7 +145,7 @@
 >
 > 常用的冲突解决方式有：`开放寻址法`和`链表法`。
 
-**1. 开放寻址法（open addressing）**
+**2.1 开放寻址法（open addressing）**
 
 出现了散列冲突，就重新探测一个空闲位置，将其插入。
 
@@ -172,7 +172,7 @@
 
 使用**一组散列函数**，若通过第一个函数得到的位置已被占用，则使用第二个散列函数，依次类推，直到找到空闲位置。
 
-**2. 链表法（chaining）**
+**2.2 链表法（chaining）**
 
 > Java 中的 HashMap，底层通过数组+链表+红黑树。
 >
@@ -181,7 +181,7 @@
 每个槽位对应一个链表。所有散列值相同的元素都放在相同槽位的链表中。
 
 * 适用于大规模数据。
-* 内存占用变多。不过对较小对象数据的存储，由于多出了结点指针，可能导致内存消耗翻倍。大对象数据时则可忽略影响。
+* 内存占用变多。不过对较小对象数据的存储，由于多出了节点指针，可能导致内存消耗翻倍。大对象数据时则可忽略影响。
 * 内存不连续，对CPU缓存不友好。
 * 需要尽可能让散列值均匀分布，防止时间复杂度退化。
 
@@ -191,50 +191,11 @@
 >
 > 可以将链表改造为其他数据结构（例如跳表、红黑树等）进行优化，避免退化为O(n)。
 
-#### 散列表的应用
+#### 3. 散列表的应用
 
 * LRU缓存淘汰策略：散列表 + 双向链表
 * Redis有序集合：跳表 + 散列表
 * LinkedHashMap：散列表 + 双向链表，原理同LRU缓存淘汰策略。
-
-
-
-
-
-### 栈
-
-栈是一种 **操作受限的线性表**。具体的实现即可以是数组(顺序栈)，也可以是链表(链式栈)。
-
-* 仅允许一端进行插入(入栈)和删除(出栈)。
-* 先进后出，后进先出。
-
-```kotlin
-/**
- * 基于数组的顺序栈
- */
-class ArrayStack(private val n: Int) {
-
-    private val data = Array<String?>(n) { null }
-    private var count = 0
-
-    fun push(item: String): Boolean {
-        return when {
-            count == n -> false
-            else -> {
-                data[count++] = item
-                true
-            }
-        }
-    }
-
-    fun pop(): String? {
-        if (count == 0) return null
-        return data[count--]
-    }
-}
-```
-
-
 
 ### 队列
 
@@ -249,56 +210,55 @@ class ArrayStack(private val n: Int) {
 | 阻塞队列   | 当队列为空时，从对头获取数据会被阻塞。队列满时，插入数据会被阻塞。使用于生产-消费模式。 |
 | 并发队列   | 通过加锁或者CAS，从而支持并发操作的队列。                    |
 
+### 栈
 
+栈是一种 **操作受限的线性表**。具体的实现即可以是数组(顺序栈)，也可以是链表(链式栈)。
 
-### 堆
+* 仅允许一端进行插入(入栈)和删除(出栈)。
+* 先进后出，后进先出。
 
-#### 堆排序
+复杂度分析：
 
-在堆排序中会使用完全二叉树。
+* 入栈、出栈：
 
-#### 数组堆化
+  * 时间复杂度：O(1)
 
-* 数组的第一个元素`array[0]`不存储数据。
-* 堆中的第一个元素就是数组 `array[1]`。
+  * 空间复杂度：O(n)
 
-##### 在完全二叉树中父节点和子节点间的快速定位
-
-假设 父节点位置为 i
-
-存在两种情况 序号从 0 开始：
+* 查询的复杂度取决于查询算法，若是二分查询则为 O(logn)
 
 ```kotlin
-val left = 2 * i + 1
-val right = 2 * i + 2
-```
+/**
+ * 基于数组的顺序栈
+ */
+class ArrayStack(private val n: Int) {
 
-序号从 1 开始：
+    private val data = Array<String?>(n) { null }
+    private var count = 0
 
-```kotlin
-val left = 2 * i
-val right = array[2 * i + 1]
-```
+    fun push(item: String): Boolean {
+        return when {
+            count == n -> false
+            else -> { // 入栈放数组后面
+                data[count++] = item
+                true
+            }
+        }
+    }
 
-##### 求完全二叉树最后一个非叶子节点
-
-完全二叉树 长度为 n。
-
-存在两种情况 序号从 0 开始：
-
-```kotlin
-val node = n >>> 1 - 1;
-```
-
-序号从 1 开始：
-
-```kotlin
-val node = n >>> 1;
+    fun pop(): String? {
+        if (count == 0) return null
+        // 从数组末尾返回数据
+        return data[count--]
+    }
+}
 ```
 
 ---
 
 ## 树（Tree）
+
+### 1. 树的结构
 
 > 非线性表，存储方式
 >
@@ -323,7 +283,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 ![树](数据结构基础.assets/树.png)
 
-### 树的遍历
+### 2. 树的遍历
 
 > 前、中、后是表示当前节点的位置。
 
@@ -347,26 +307,26 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 
 
-### 二叉树
+### 3. 二叉树
 
->  每个节点**最多两个**子节点：左子节点和右子节点。
+每个节点最多两个子节点：**左子节点** 和 **右子节点**。超过2个就是多叉树。
 
-### 满二叉树
+### 4. 满二叉树
 
 > 特殊的完全二叉树
 
 * 叶子节点都在最底层。
 * 除叶子节点外，都有两个子节点。
 
-### 完全二叉树
+### 5. 完全二叉树
 
 * 叶子节点都在最后两层。
 * 最后一层所有叶子节点都靠左排列（左对齐、连续）。
-* 除最后一层外，其他层节点个数都达到最大。
+* 除最后一层外，其他层节点个数都达到最大(满)。
 
-### 二叉查找树（Binary Search Tree）
+### 6. 二叉搜索树（Binary Search Tree）
 
-> 也叫作`二叉排序树`：由于**左小右大**，使用中序遍历，可以输出有序的数据序列。
+> 也叫作`二叉排序树`：由于**左小右大**，使用中序遍历时可以输出有序的数据序列。
 
 特点
 
@@ -374,7 +334,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 - **右子树**上的所有节点的值均**>=父节点**的值。
 - 左右子树也为满足上述条件的二叉搜索树。
 
-#### 查找
+#### 6.1 查找
 
 * 首先和根节点比较，如果相等直接返回。
 
@@ -382,18 +342,18 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 * 若**数据比节点大**，则从**右子树中递归**搜索。
 
-#### 插入
+#### 6.2 插入
 
 * 执行查找流程
 
 * 若**数据比节点大**且节点的**右子树为空**，则直接将新数据**插入右子节点**位置。若不为空，**则递归遍历右子树**，查找合适位置。
 * 若**数据比节点小**且节点的**左子树为空**，则直接将新数据**插入左子节点**位置。若不为空，**则递归遍历左子树**，查找合适位置。
 
-#### 删除
+#### 6.3 删除
 
 1. 需要删除的节点**没有子节点**：只需要将父节点中原本**指向删除子节点的指针置为null**。
 2. **只有一个子节点**：将父节点中原本**指向删除子节点的子节点**。
-3. **存在两个子节点：**找到删除子节点右子树中的最小节点，将它的数据替换到删除节点中，再删除这个最小节点。由于是最小节点，至多只有右节点，从原本位置中删除时参考前2条。**实质为 为前/后驱结点的数据交换 + 删除**。此处为后继结点删除。
+3. **存在两个子节点：**找到删除子节点右子树中的最小节点，将它的数据替换到删除节点中，再删除这个最小节点。由于是最小节点，至多只有右节点，从原本位置中删除时参考前2条。**实质为 为前/后驱节点的数据交换 + 删除**。此处为后继节点删除。
 
 
 
@@ -422,7 +382,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 
 
-### 平衡树
+### 7. 平衡树
 
 > 保证左右子树高度差相对较小，解决在频繁的插入和删除中时间复杂度退化的问题。
 >
@@ -439,7 +399,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 
 
-### 234树/4阶B树
+#### 234树/4阶B树
 
 > 为什么B树常用于存储：
 >
@@ -455,7 +415,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 删除操作：``下溢``。
 
-###  B+树
+####  B+树
 
 是一种平衡树，所有的数据都保持在叶子节点中，因此每次查询次数基本相同，查询很稳定。
 
@@ -467,11 +427,11 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 
 
-### 红黑树（Red-Black Tree）
+#### 红黑树（Red-Black Tree）
 
 > 一种高效的自平衡二叉查找树。但是并不严格符合平衡二叉树的定义，而是近似平衡。
 >
-> 每个结点上增加一个存储位表示结点的颜色。
+> 每个节点上增加一个存储位表示节点的颜色。
 >
 > 代码实现中可用一个哨兵代表NIL。
 
@@ -489,7 +449,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 ![image-20220929225928693](数据结构基础.assets/image-20220929225928693.png)
 
 
-#### 树的变换
+##### 树的变换
 > 当红黑树平衡被打破时，通过**旋转**和**变色**恢复。
 >
 > 旋转操作对于二叉查找树来说**一般情况就是为了找到合适的中间值，并重新构建成二叉查找树**。
@@ -504,9 +464,9 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 ![image-20220929210153548](数据结构基础.assets/image-20220929210153548.png)
 
-#### 插入操作
+##### 插入操作
 
-* 红黑树规定，插入的节点必须是红色。插入红色不会影响黑高，仅需要处理两个红色结点相邻的场景。
+* 红黑树规定，插入的节点必须是红色。插入红色不会影响黑高，仅需要处理两个红色节点相邻的场景。
 * 如果插入的是根节点，直接变色为黑色。
 * 其余情况插入的节点``最开始都一定是红色``（出现连续两个红色节点的冲突情况时需要进行旋转和变化）。
 
@@ -520,10 +480,10 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
   * LR：变色（插入、祖父） + 父左旋 （变为了LL）+ 祖父右旋
 - 插入节点的叔父节点是红色（4种，对应234树的上溢）：只需要变色。
 
-  1. 父、叔结点：改为黑色（黑高同时 + 1，保证局部平衡）。
-2. 祖父结点：改为红色（黑高 - 1，从而保证整体平衡）。
+  1. 父、叔节点：改为黑色（黑高同时 + 1，保证局部平衡）。
+2. 祖父节点：改为红色（黑高 - 1，从而保证整体平衡）。
 
-#### 删除操作
+##### 删除操作
 
 * 红色节点直接删除。
 * 黑色节点删除。
@@ -544,7 +504,64 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 * 计算每一层的总时间
 * 统计树高，累加
 
+---
 
+## 堆
+
+* 堆是一种特殊的树（完全二叉树），使用使用数组来存储。
+* 堆中每个节点的值和左右节点的值具有一定的大小关系。
+  * **大顶堆**：每个节点的值都**大于等于左右节点的值**。
+  * **小顶堆**：每个节点的值都**小于等于左右节点的值**。
+
+### 堆化
+
+检测是否满足堆的特性（节点和左右节点的大小关系），不满足则向上逐层比较进行交换, 直到满足条件。
+
+> 左右子节点
+
+```kotlin
+// 定位节点的左右子节点
+// 序号从 0 开始
+val left = 2 * i + 1
+val right = 2 * i + 2
+
+// 序号从 1 开始
+val left = 2 * i
+val right = 2 * i + 1
+```
+
+### 数组建堆
+
+> 时间复杂度：O(n)，空间复杂度：O(1)
+
+对所有非叶子节点倒序 依次进行堆化即可。
+
+> 最后一个非叶子节点
+
+```kotlin
+// 求长度为n的 完全二叉树最后一个非叶子节点
+// 若序号从 0 开始
+val node = n / 2 - 1;
+
+// 若序号从 1 开始
+val node = n / 2;
+```
+
+
+#### 插入元素
+
+* 新插入的数据直接放在数组末尾。
+
+* 执行堆化。
+
+#### 删除堆顶
+
+* 将末尾元素和堆顶元素交换，然后删除末尾元素。
+* 选择左右子节点中较大的子树，自上而下进行堆化。
+
+
+
+---
 
 ## 图
 
@@ -564,10 +581,16 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 
 ### 基础
 
-并查集是一种树型的数据结构，常用于处理一些**不相交集合的合并于查询问题**。
+> 并查集的连通分量，某个节点作为根节点时的子树大小。
 
-* 合并两个元素所在集合：分别找到两个元素所在根节点，然后将其中一个集合的根节点作为另一个集合的根节点的父节点。
-* 查询两个元素是否属于同一个集合：分别查找两个元素的根节点，然后比对根节点是否相同，相同就属于同一个结合。
+并查集是一种树型的数据结构，常用于处理一些**不相交集合的合并于查询问题**，同时求连通分量。
+
+基本思路是初始时所有元素都是独立的个体， 通过连接组成更大的集合。
+
+* 每个元素都有一个父节点，从而这个集合可以组成一棵树。树的根节点相同表示连通。
+
+* **合并两个元素所在集合**：分别找到两个元素所在根节点，然后将其中一个集合的根节点作为另一个集合的根节点的父节点。
+* **查询两个元素是否属于同一个集合**：分别查找两个元素的根节点，然后比对根节点是否相同，相同就属于同一个结合。
 
 时间复杂度取决于 树的深度 O(h)。
 
