--- a/docs/base/数据结构基础.md
+++ b/docs/base/数据结构基础.md
@@ -422,7 +422,7 @@ A是BE的**父节点**，BE是A的**子节点**，B和E互为**兄弟节点**。
 * **非叶子节点**：**保存索引，不保存数据**。
 
 * **叶子节点**：**保存数据**。
-* **叶子节点间增加了相邻叶子节点的指针，形成了一个链表**。结合非叶子节点，有点跳表的意思。
+* **叶子节点间增加了相邻叶子节点的指针，形成了一个链表**。有点跳表的意思。
   * 全表扫描就是将所有叶子节点遍历一遍即可，不需要像B树那样逐层扫描。
 
 
@@ -563,13 +563,90 @@ val node = n / 2;
 
 ---
 
-## 图
+## 图（Graph）
 
-邻接矩阵、邻接表、逆邻接表
+图是一种复杂的非线性表结构，图由以下几个部分组成：
 
-深度广度优先搜索
+*  **顶点（vertex）**：表示图中的元素。
+* **边（edge）**：连接两个顶点的线。
+
+### 图的类型
+
+#### 1. 有向图和无向图
+
+同时根据边是否存在方向，可以分为 **有向图** 和 **无向图**，它们是最基础的图。
+
+* **无向图**：边没有方向的概念。
+  * 度（degree）：顶点和多少条边相连。
+* **有向图**：边存在方向。
+  * 入度（In-degree）：多少条边指向顶点。
+  * 出度（Out-degree）：从顶点发散出多少条边。
+
+#### 2. 带权图（weighted graph）
+
+给边添加权重就是带权图，例如表示好友间的亲密度。当然带权图根据边有无方向可以分为 带权有向图和带权无向图。
+
+#### 3. 稀疏图（Sparse Matrix）
+
+特点就是顶点多，但是顶点的边少，一般用邻接表来表示。社交网络就是典型的稀疏图，人多，但是一个人的社交圈是有限的。
 
 
+
+### 图的存储方式
+
+#### 1. 邻接矩阵（Adjacency Matrix）
+
+通过一个`A[n][n]`二维数组来存储图, n表示顶点数。
+
+对于有向图，`A[i][j] = 1` 表示有边从顶点 i 指向 顶点 j，`A[j][i] = 1` 表示有边从顶点 j 指向 顶点 i，
+
+不过对于无向图来说 `A[i][j]` 和 `A[j][i]`是同一条边，此时存在一半的空间浪费，对于稀疏图浪费的空间就更多了。
+
+对于带权图来说 只要  `A[i][j]` 的值大于0 就存在边，而这个值可以表示权重，例如 `A[i][j] = 3`。 
+
+* 存储简单，操作快，可以快速获取两顶点的关系。
+* 多图间的问题可以转为矩阵运算。
+* 存在空间浪费，但是缓存友好。
+
+#### 2. 邻接表（Adjacency List）
+
+使用一个一维数组表示多少有顶点，每个顶点对应一个链表，链表中存储和这个顶点相连的其他顶点。有向图中存储的就是**当前顶点指向的其他顶点，链表长度表示出度**。
+
+* 节省空间，缓存不友好。
+* 操作比较耗时，查询两顶点的关系需要遍历链表，查找入度更加困难。
+  * 可以通过使用**跳表**等动态数据结构代替链表来提高查询等效率。
+
+```kotlin
+class Graph(
+    // 顶点数
+    val v: Int
+) {
+    // 邻接表
+    private val adj = Array(v) {
+        LinkedList<Int>()
+    }
+}
+```
+
+
+
+#### 3. 逆邻接表（Adjacency List）
+
+和邻接表区别 在于链表中存储的是 **指向当前顶点的其他顶点，链表长度表示入度**。主要就是为了解决使用邻接表计算入度困难的问题。
+
+### 图中常用的搜索算法
+
+* 深度优先搜索（DFS）
+* 广度优先搜索（BFS）
+
+深度广度优先搜索、最短路径、最小生成树、二分图
+
+### 常见的应用场景
+
+* 社交网络中的好友关系
+  * 顶点就是用户，边表示用户间的关系。
+  * 入度表示被多少粉丝关注，出度表示关注了多少人。
+  * 边的权重表示亲密度。
 
 
 
