--- a/docs/base/算法基础.md
+++ b/docs/base/算法基础.md
@@ -79,13 +79,40 @@
 
 ## 算法思想
 
+算法 是用于解决某个问题的，而一个问题可以分为目标、决策约束条件这几个部分。
+* **目标**：就是我们的期望值，问题的最优结果。
+* **约束条件**：一些无法避免，必须遵循的条件，我们所有的决策都受到这些条件的约束。
+* **决策**：在解决问题过程我们会做出一个个决策，当然这些决策受约束条件的影响，最终解决这个问题。 可以对应到 算法思想。
+
+整个问题的解决过程就是，首先给定数据，然后在一定条件的约束下，采取一定的决策得到目标值。
+
+其中条件无法改变，目标也是确定的，一般是最大、最小或给定的明确值。决策是这个过程的变量，决策的好坏就决定了整体的好坏。
+
+### 枚举/穷举
+
+> 解空间：该问题所有可行/不可行解的集合
+
+枚举就是在 解空间中 全局遍历找出最优解，**穷举所有的可能组合求出所有候选答案，并从这些候选答案中取选择正确的结果，枚举法得到的一定是最优解**。当然前提是候选答案是能够确定的。
+
+存在的问题：
+
+* 就是随着数据规模的上升，解空间 会急剧膨胀，从而导致时间复杂度快速上升。
+
 ### 贪心
 
-贪心的核心思想就是 每次都保证局部最优，从而推导全局最优。但不能保证一定是全局最优，主要是由于前一个选择会影响后面的选择。
+**贪心的核心思想就是 每次都选出当前情况下的最优解，保证局部最优，从而一步步推导出全局最优**，速度快，和数据规模时线性关系。
 
-* 背包
+相比于枚举，**贪心并不能保证一定是全局最优解，有时可能还是最坏解，不太稳定**，主要是由于前一个选择会影响后面的选择。有点竭泽而渔的意思，当前能收获很多，但是之后就没有鱼能够捕获了，反而得到了最坏的结果。
+
+对于那些 存在限制条件 求 期望值的场景，往往可以使用贪心思想来处理：
+
+* 01背包问题
 * 分糖果
-* 霍夫曼编码
+* 霍夫曼编码 Huffman Coding
+* Prim 和 Kruskal 最小生成树算法
+* Dijkstra 单源最短路径算法
+
+
 
 ### 分治
 
@@ -169,9 +196,27 @@ class Solution {
 }
 ```
 
+### 启发式
+
+启发式的思想是在一个合理的资源(时间、空间)范围内，求得一个比较优质的解，一般优于贪心的解，可能达到最优解，
+
+#### 邻域搜索
+
+基本思路：
+
+1. 确定一个初始解。
+2. 根据初始解 划定一个 邻域(局部解空间)
+3. 比较邻域中的解，选取更好的。这里有两种方式，一种是找到好的就直接更新，还有一种是遍历选取最好的一个。
+4. 根据3的得到的解，重新计算邻域。
+5. 重复3，4，知道满足终止条件就退出。
+
+> 陷入局部最优解时，即邻域内其他解都比当前差，或者多次移动后回到同一个解。此时需要跳出这个区域来求解，这个过程叫做 **扰动（shake、perturbation）**
+
+#### 群体仿生
 
 
 
+---
 
 ## 排序算法
 
@@ -393,7 +438,6 @@ class Solution {
 ```
 
 
-
 ###  快速排序（Quick Sort）
 
 > Java 的 `Arrays.sort()` 就是快速排序。
@@ -429,7 +473,7 @@ class Solution {
 
 
 ```kotlin
-/**
+		/**
      * 快速排序，不稳定排序算法
      */
     fun quickSort(arr: IntArray): IntArray {
@@ -631,6 +675,24 @@ class Heap(
 
 
 
+## 拓扑排序
+
+实现方式：
+
+* Kahn算法：贪心算法，代码形式类似BFS
+  * 统计所有节点的入度。
+  * 依次遍历入度为0的节点，并输出。仅0才会输出。
+  * 环检测：输出的节点少于总节点数，最终还存在入度不为0的节点。表示存在环。
+* DFS深度优先搜索算法：
+  * 
+
+常见的应用场景：
+
+* 确定源代码的编译依赖关系。
+* 检查图是否存在环。
+
+
+
 ---
 
 ## 查找算法
@@ -773,6 +835,8 @@ class Heap(
 
 
 
+---
+
 ## 哈希算法
 
 > 将任意长度的二进制值串映射为固定长度的二进制值串。
@@ -796,7 +860,7 @@ class Heap(
 
 ### 一致性哈希算法
 
-> # 背景：在分布式缓存中，我们通过取模的方式将哈希值分布到不同服务器上，若此时需要进行扩容/缩容时，所有数据都需要重新计算哈希值。
+> 背景：在分布式缓存中，我们通过取模的方式将哈希值分布到不同服务器上，若此时需要进行扩容/缩容时，所有数据都需要重新计算哈希值。
 >
 > 那么就会导致所有数据请求都会穿透缓存，直接请求数据库，可能出现雪崩效应，压垮数据库。
 
@@ -808,9 +872,32 @@ class Heap(
 
 常见的字符串匹配算法有 BF、RK、BM、KMP、AC 自动机、Trie等。
 
-### BF
+### BF（Brute Force）
+
+> 暴力匹配算
+
+算法思路就是主串和模式串直接一位位的进行匹配。
+
+时间复杂度： O(n*m)，n 主串长度，m模式串长度。
 
 ### RK
+
+算法思路：
+
+1. 计数主串中所有长度和m的子串, m是 模式串的长度。
+2. 计数模式串的哈希值和这些子串进行匹配。哈希值相同则匹配。
+
+哈希算法的设计思路 ：
+
+根据字符范围设计 K 进制，通过进制换算计算出 子串的值。例如 a~z 对应 0~25
+
+`abc = 0*26*26 + 1 * 26 + 2` 。
+
+由于连续的子串间存在一定联系，可以在一次遍历中快速的计算出所有子串的哈希值。
+
+
+
+
 
 ### BM算法
 
@@ -852,6 +939,35 @@ class Heap(
 * 若之前 `b[i - r] = b[i] ` 则 `b[r, i - 1]` 是  `b[r, i - 1]` 的最长可匹配后缀子串。否则就不一定是最长。
 
 
+
+## 最短路径算法
+
+### Dijkstra
+
+用于求有向图中单个源点到其他顶点的最短路径，利用贪心思想。
+
+```kotlin
+// 记录从 源点 到 i 的最短距离
+vertex = vertexs[i]
+// queue 优先级队列，保证每次先从 距离源点 最近的顶点延展到其他顶点，保证出队顶点已经是最短路径。
+// bfs 处理 和顶点 i 相连的所有边 edge，层层向下。
+// edge.id 的最短路径
+nextVertex = vertexs[edge.id]
+// 选取最小
+vertex.dist = minOf(vertex.dist + edge.weight, nextVertex.dist)
+```
+
+
+
+### Floyd
+
+右称为插点法，用于解决多源最短路径问题。
+
+```kotlin
+// mp[i][j] 记录两点间的最短路径
+// 插点 k, 比较 i -> j 和 i -> k + k -> j
+mp[i][j] = minOf(mp[i][j], mp[i][k] + mp[k][j])
+```
 
 
 
