--- a/docs/base/算法基础.md
+++ b/docs/base/算法基础.md
@@ -135,21 +135,21 @@
 
 ### 动态规划
 
-时间复杂度：O(n*w)
+动态规划用于解决最优问题（最小、最大），使用动态规划的前提
 
-空间复杂度：O(n*w)
-
-动态规划用于解决最优问题（最小、最大）。
-
-* 最优子结构：问题的最优解包含子问题的最优解；后面阶段的状态可以通过前面阶段的状态推导出来。
-* 无后效性：阶段的状态确定后，不会受后面阶段的影响。
-* 重复子问题：不同的决策序列，到达某个阶段后，可能会产生重复的状态。
+* **最优子结构**：问题的最优解包含子问题的最优解；后面阶段的状态可以通过前面阶段的状态推导出来。
+* **无后效性**：子问题的状态确定后，不会受后面阶段的影响。
+* **重复子问题**：不同的决策序列，到达某个阶段后，可能会产生重复的状态。
 
 一般步骤：
 
 * 推导状态转移方程。
 * 定义一个 `dp` 状态数组，记录各个阶段的状态。
 * 编码
+
+时间复杂度：O(n*w)
+
+空间复杂度：O(n*w)，部分动态规划空间复杂度可以进行优化。
 
 ```kotlin
 /**
@@ -884,7 +884,7 @@ class Heap(
 
 算法思路：
 
-1. 计数主串中所有长度和m的子串, m是 模式串的长度。
+1. 计数主串中所有长度为m的子串, m是 模式串的长度。
 2. 计数模式串的哈希值和这些子串进行匹配。哈希值相同则匹配。
 
 哈希算法的设计思路 ：
