--- a/docs/base/算法基础.md
+++ b/docs/base/算法基础.md
@@ -102,7 +102,9 @@
 
 **贪心的核心思想就是 每次都选出当前情况下的最优解，保证局部最优，从而一步步推导出全局最优**，速度快，和数据规模时线性关系。
 
-相比于枚举，**贪心并不能保证一定是全局最优解，有时可能还是最坏解，不太稳定**，主要是由于前一个选择会影响后面的选择。有点竭泽而渔的意思，当前能收获很多，但是之后就没有鱼能够捕获了，反而得到了最坏的结果。
+相比于枚举，**贪心并不能保证一定是全局最优解，有时可能还是最坏解，不太稳定**，主要是由于前一个选择会影响后面的选择。
+
+贪心有点竭泽而渔的意思，当前能收获很多，但是之后就没有鱼能够捕获了，反而得到了最坏的结果。
 
 对于那些 存在限制条件 求 期望值的场景，往往可以使用贪心思想来处理：
 
@@ -604,7 +606,7 @@ class Solution {
 
 ### 堆排序（Heap sort）
 
-堆排序就是使用 **堆** 的特性来进行排序。
+堆排序就是使用 **堆** 的特性来进行排序。 时间复杂度 O(nlogn)
 
 ```kotlin
 class Heap(
