--- a/docs/base/音视频基础.md
+++ b/docs/base/音视频基础.md
@@ -229,7 +229,37 @@ I帧也叫关键帧 通常是每个GOP的第一帧，它包含了帧的完整信
 泛娱乐直播拓扑架构
 实时直播拓扑架构
 
+### 直播常用的协议
 
+* **HLS**协议：HTTP的流媒体协议，高延时（10s以上），跨平台性较好。
+* **RTMP**协议：长连接，低延时（3s左右），网络穿透性差。
+
+* **HDL**协议：RTMP协议的升级版，低延时（2s左右），网络穿透性好。
+
+* **RTP**协议：低延时（1s以内），默认使用UDP作为传输协议。
+
+非交互式场景可选 HLS 协议。交互式场景选择 HDL 或 RTMP协议。视频会议、连麦则可选RTP协议。
+
+### 交互式直播场景
+
+核心系统，基于 **流媒体服务（Live Server）**：
+
+* 推流系统：主播使用推流系统将采集的视频和音频进行编码，并最终发送到流媒体服务器上。
+* 拉流系统：用户端使用拉流系统将流媒体服务器上的视频资源进行播放。
+
+其他系统，基于 **服务器模块（Http Server）**：
+
+* 礼物系统：
+* 支付系统：充值、提现等。
+* 聊天系统：
+* 社交系统：第三方登录、分享、关注列表、开播列表等。
+
+## 拉流播放器
+
+* 协议层处理：FFmpeg的 libavformat 模块。
+* 解码得到原始数据：FFmpeg的 libavcodec 模块。
+* 音视频渲染：OpenGL ES 相应API。
+* 后处理增加清晰度：对比度调整、去块滤波器、锐化等效果器
 
 ## 相关工具和项目
 
