--- a/docs/private/常用操作记录.md
+++ b/docs/private/常用操作记录.md
@@ -200,20 +200,24 @@ ruby -e "$(curl -fsSL /homebrew/go)"
 ```
 
 ```bash
-brew deps 		# 列出软件包的依赖关系
-brew info 		# 查看软件包信息
-brew list		# 列出已安装的软件包s
-brew search 
-brew install 
-brew uninstall 
 brew update		# 更新 Homebrew 的信息
 brew outdated		# 看一下哪些软件可以升级
 brew upgrade; brew cleanup    # 如果都要升级，直接升级完然后清理干净
 brew upgrade <xxx>	# 如果不是所有的都要升级，那就这样升级指定的
 
+brew deps 		# 列出软件包的依赖关系
+brew info 		# 查看软件包信息
+brew list		# 列出已安装的软件包
+
+brew search
+
+brew install 
+brew uninstall 
 ```
 
-> 设置国内源
+### brew旧版本镜像设置
+
+> 设置国内源, brew 4.0后镜像替换方式参考后面。
 >
 > 使用科学上网效果更佳。
 
@@ -235,6 +239,28 @@ git remote set-url origin https://mirrors.ustc.edu.cn/homebrew-cask.git
 
 ```shell
 export HOMEBREW_BOTTLE_DOMAIN=https://mirrors.ustc.edu.cn/homebrew-bottles/bottles
+```
+
+### brew4.0 镜像设置
+
+从Git配置 改为 JSON 文件下载，配置文件从 `formulae.brew.sh` 下载，替换API镜像：
+
+```shell
+export HOMEBREW_API_DOMAIN="https://mirrors.tuna.tsinghua.edu.cn/homebrew-bottles/api"
+export HOMEBREW_BREW_GIT_REMOTE="https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/brew.git"
+```
+
+不再使用本地的 `Homebrew-core` 和 `Homebrew-cask`，可以删除。
+
+```shell
+brew untap homebrew/core
+brew untap homebrew/cask
+```
+
+关闭API更新，使用旧模式
+
+```shell
+export HOMEBREW_INSTALL_FROM_API=1
 ```
 
 
