--- a/docs/面试题/网络相关面试题.md
+++ b/docs/面试题/网络相关面试题.md
@@ -16,13 +16,15 @@
 
 为什么要三次：
 
-前3次的握手保证双方互相进行了一次完整的通讯，实现了数据交换，而第三次之后发送的第四次、第五次握手等都是无效的操作，会导致陷入循环。这是基于网络协议中经典的红蓝军问题，这个问题表明在不可信的通道上无法涉及出完全可靠的通讯协议，因为最后一个确认报文的发送，发送方用于无法知道接收方是否收到。所以仅执行必要的三次握手。
+前3次的握手保证双方互相进行了一次完整的通讯，实现了数据交换，而第三次之后发送的第四次、第五次握手等都是无效的操作，会导致陷入循环。
+
+> 网络协议中经典的红蓝军问题，这个问题表明在不可信的通道上无法设计出完全可靠的通讯协议，因为最后一个确认报文的发送，发送方用于无法知道接收方是否收到。所以仅执行必要的三次握手。
 
 
 
 **四次挥手**：
 
-* 第一次挥手 FIN ：客户端发起断开请求，单方便表示断开。
+* 第一次挥手 FIN ：客户端发起断开请求，单方面表示断开。
 * 第二次挥手 ACK：服务端发送一个应答，表示我知道了。此时服务端并没有断开，因为可能还有数据需要处理，客户端也会继续等待。
 * 第三次挥手 FIN/ACK：服务端处理完数据后，也发起一个断开请求。
 * 第四次挥手 ACK：客户端发送一个应答，服务端收到这个应答后 两边就正式断开了。
@@ -74,4 +76,4 @@ https 是在 tcp 之前增加了一层 安全套接层(SSL/TLS)，
 * ~~若是TLS1.2，会在发送证书协商参数，交换Client Param和 Server Param。~~
 * 客户端验证证书。逐级验证证书链，之后再使用公钥验证签名，确认服务端身份。
 * 验证完证书之后，客户端也获取到了所有参数，生成主密钥。
-* 后续开始加密通讯。这部分就和上面的HTTTP一样。
+* 后续开始加密通讯。这部分就和上面的HTTP一样。
