--- a/docs/private/常用操作记录.md
+++ b/docs/private/常用操作记录.md
@@ -20,7 +20,7 @@ ls
 ./gradlew app:assembleDebug --console=plain
 
 
-./gradlew -p app dependencies >> /Users/zhaozhen/Downloads/dependencies.txt
+./gradlew -p app dependencies >> ~/Downloads/dependencies.txt
 
 npm install
 npm run dev
