--- a/docs/android/drawable/图片效果处理.md
+++ b/docs/android/drawable/图片效果处理.md
@@ -13,7 +13,7 @@
 </shape>
 ```
 
-``android:angle``:此属性设置渐变角度，角度需要为45的倍数，余数部分不足45按照45算。默认0为从左到右，90为从上到下。效果是逆时针旋转。
+``android:angle``:此属性设置渐变角度，角度需要为45的倍数，余数部分不足45按照45算。默认0为从左到右，90为从下到上。效果是逆时针旋转。
 
 
 
