--- a/docs/private/常用操作记录.md
+++ b/docs/private/常用操作记录.md
@@ -36,6 +36,9 @@ curl --resolve ngx.test:8080:127.0.0.1 http://ngx.test:8080
 # 手动编译 aidl
 # 生成到 java 文件下，指定java
 aidl -o --lang=java ./java aidl/com.zaze.demoe/ITest.aidl
+
+# 监听输出文件
+tail -f xx.log
 ```
 
 ---
